# BinaryBet

./: README.md  structure.txt
backend/: .env.example  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.js
backend/prisma/migrations/20250325094252_init/: migration.sql
backend/prisma/migrations/20250330151142_extended_schema/: migration.sql
backend/prisma/migrations/20250331081920_add_withdrawal_model/: migration.sql
backend/prisma/migrations/20250331104219_update_bet_model/: migration.sql
backend/src/: index.js
backend/src/controllers/: authController.js  betController.js  matchController.js  userController.js  withdrawalController.js
backend/src/routes/: auth.js  bet.js  matches.js  user.js  withdrawal.js
binarybet/: Anchor.toml  Cargo.toml
binarybet/programs/binarybet/: Cargo.toml
binarybet/programs/binarybet/src/: lib.rs
binarybet/tests/: binarybet.js
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: BettingForm.jsx  Footer.jsx  Layout.jsx  Navbar.jsx
frontend/lib/: solana.js
frontend/pages/: 404.jsx  _app.jsx  betting.jsx  dashboard.jsx  faq.jsx  index.jsx  privacy.jsx  recentactivity.jsx  responsibility.jsx  terms.jsx
frontend/styles/: globals.css
