[package]
name = "binarybet"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "binarybet"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
solana-address-lookup-table-interface = { version = "=2.2.0", default-features = false }
solana-pubkey = { version = "=2.2.0" }
